tests/res/barriers/assert_throws.say
// `!` on a null value throws at the assertion.
say maybe? = null;
say w = maybe!; // error: unexpected null
